--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^11.2.0",
     "react": "^18.x.x",
     "react-dom": "^18.x.x",
-    "react-router-dom": "^6.x.x",
-    "react-icons": "^4.x.x"
+    "react-icons": "^4.x.x",
+    "react-router-dom": "^6.x.x"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
